--- a/talkMore/src/app/talk-requests/talk-requests.component.html
+++ b/talkMore/src/app/talk-requests/talk-requests.component.html
@@ -1,1 +1,6 @@
-<p>talk-requests works!</p>
+<app-header></app-header>
+<div>
+    <app-new-requests></app-new-requests>
+    <app-my-requests></app-my-requests>
+</div>
+
