--- a/talkMore/src/styles.sass
+++ b/talkMore/src/styles.sass
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+
+$backgroundMenu: #ebdfd9
+$profileCircleColor: #163069
+$subtitleMenuUserColor: #807f7f
+$white: white
+$black: black
+$orange: #EC7000
+
+.spaceTop
+  margin-top: 40px
+
+.arrowAlign
+  margin-top: 15px
