Create table layout with fixed data

--- a/talkMore/src/styles.sass
+++ b/talkMore/src/styles.sass
@@ -4,6 +4,7 @@ $backgroundMenu: #ebdfd9
 $profileCircleColor: #163069
 $subtitleMenuUserColor: #807f7f
 $white: white
+$grey: $subtitleMenuUserColor
 $black: black
 $orange: #EC7000
 
