--- a/talkMore/src/app/talk-requests/my-requests/my-requests.component.html
+++ b/talkMore/src/app/talk-requests/my-requests/my-requests.component.html
@@ -7,4 +7,64 @@
             Aqui você pode acompanhar o andamento de suas solicitações
         </mat-card-subtitle>
     </mat-card-header>
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z0">
+
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef> Id </th>
+            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="company">
+            <th mat-header-cell *matHeaderCellDef> Empresa </th>
+            <td mat-cell *matCellDef="let element">
+                <label class="table-item-title">{{element.company}}</label><br>
+                <label class="table-item-subtitle">CNPJ: {{element.cnpj  | mask: '00.000.000/0000-00'}}</label>
+            </td>
+        </ng-container>
+
+        <ng-container matColumnDef="plan">
+            <th mat-header-cell *matHeaderCellDef class="tableAlignHeader"> Plano </th>
+            <td mat-cell *matCellDef="let element" class="tableAlignCell tableColorCell"> {{this.getPlan(element.plan)}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="tariff">
+            <th mat-header-cell *matHeaderCellDef class="tableAlignHeader"> Tarifa </th>
+            <td mat-cell *matCellDef="let element" class="tableAlignCell tableColorCell"> {{element.tariff | currency: 'BRL'}}  </td>
+        </ng-container>
+
+        <ng-container matColumnDef="minutes">
+            <th mat-header-cell *matHeaderCellDef class="tableAlignHeader"> Minutos </th>
+            <td mat-cell *matCellDef="let element" class="tableAlignCell tableColorCell"> {{this.getMinutes(element.minutes)}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="planValue">
+            <th mat-header-cell *matHeaderCellDef class="tableAlignHeader"> Valor do plano </th>
+            <td mat-cell *matCellDef="let element" class="tableAlignCell tableColorCell"> {{element.planValue | currency: 'BRL'}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="accessionDate">
+            <th mat-header-cell *matHeaderCellDef class="tableAlignHeader"> Data de adesão </th>
+            <td mat-cell *matCellDef="let element" class="tableAlignCell tableColorCell"> {{element.accessionDate | date: 'shortDate'}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="sendDate">
+            <th mat-header-cell *matHeaderCellDef class="tableAlignHeader"> Data de adesão </th>
+            <td mat-cell *matCellDef="let element" class="tableAlignCell tableColorCell"> {{element.sendDate | date: 'shortDate'}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef class="tableAlignHeader"> Ação </th>
+            <td mat-cell *matCellDef="let element" class="tableAlignCell tableColorCell"> <button mat-button
+                    [matMenuTriggerFor]="menuActions">{{element.action}}</button> </td>
+        </ng-container>
+
+        <mat-menu #menuActions="matMenu">
+            <button mat-menu-item>Detalhes</button>
+            <button mat-menu-item>Editar</button>
+            <button mat-menu-item>Remover</button>
+        </mat-menu>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </mat-card>
