--- a/talkMore/src/app/talk-requests/my-requests/my-requests.component.sass
+++ b/talkMore/src/app/talk-requests/my-requests/my-requests.component.sass
@@ -11,6 +11,9 @@ table
   font-size: smaller
   color: $grey
 
+.tableFontHeader
+  font-weight: bolder
+
 .tableAlignHeader
   text-align: center
   justify-content: center
@@ -21,4 +24,8 @@ table
 
 .tableColorCell
   color: $grey
+
+.mat-row
+  height: 70px
+  
   
