--- a/talkMore/src/app/talk-requests/talk-requests.component.html
+++ b/talkMore/src/app/talk-requests/talk-requests.component.html
@@ -1,6 +1,146 @@
 <app-header></app-header>
 <div>
-    <app-new-requests></app-new-requests>
-    <app-my-requests></app-my-requests>
+    <mat-card class="mat-elevation-z0 spaceTop">
+        <mat-card-header>
+            <mat-card-title>
+                Nova Solicitação
+            </mat-card-title>
+            <mat-card-subtitle>
+                Insira aqui os dados cadastrais para uma nova solicitação
+            </mat-card-subtitle>
+        </mat-card-header>
+        <form [formGroup]="newRequestForm" novalidate (ngSubmit)="onSubmit()">
+            <div class="formLayout" fxLayout="row" fxLayoutGap="20px">
+                <mat-form-field fxFlex="31.5">
+                    <mat-label>Empresa</mat-label>
+                    <input matInput placeholder="" formControlName="company">
+                    <mat-error *ngIf="newRequestForm.controls['company'].hasError('required')">
+                        Empresa é <strong>obrigatório</strong>
+                    </mat-error>
+                </mat-form-field>
+                <mat-form-field fxFlex="15">
+                    <mat-label>CNPJ</mat-label>
+                    <input matInput placeholder="" formControlName="cnpj" mask="00.000.000/0000-00">
+                    <mat-error *ngIf="newRequestForm.controls['cnpj'].hasError('required')">
+                        CNPJ é <strong>obrigatório</strong>
+                    </mat-error>
+                </mat-form-field>
+                <mat-form-field fxFlex="15">
+                    <mat-label>Plano</mat-label>
+                    <mat-select formControlName="plan">
+                        <mat-option>Selecione</mat-option>
+                        <mat-option *ngFor="let plan of _talkMorePlan" [value]="plan.value">
+                            {{plan.label}}
+                        </mat-option>
+                      </mat-select>
+                    <mat-error *ngIf="newRequestForm.controls['plan'].hasError('required')">
+                        Plano é <strong>obrigatório</strong>
+                    </mat-error>
+                </mat-form-field>
+            </div>
+            <div class="formLayout" fxLayout="row" fxLayoutGap="20px">
+                <mat-form-field fxFlex="15">
+                    <mat-label>Tarifa</mat-label>
+                    <input matInput placeholder="" formControlName="tariff" prefix="R$ " mask="separator.2" thousandSeparator=".">
+                    <mat-error *ngIf="newRequestForm.controls['tariff'].hasError('required')">
+                        Tarifa é <strong>obrigatória</strong>
+                    </mat-error>
+                </mat-form-field>
+                <mat-form-field fxFlex="15">
+                    <mat-label>Minutos</mat-label>
+                    <input matInput placeholder="" formControlName="minutes" suffix=" minuto(s)" mask="999999">
+                    <mat-error *ngIf="newRequestForm.controls['minutes'].hasError('required')">
+                        Minutos é <strong>obrigatório</strong>
+                    </mat-error>
+                </mat-form-field>
+                <mat-form-field fxFlex="15">
+                    <mat-label>Valor do plano</mat-label>
+                    <input matInput placeholder="" formControlName="planValue" prefix="R$ " mask="separator.2" thousandSeparator=".">
+                    <mat-error *ngIf="newRequestForm.controls['planValue'].hasError('required')">
+                        Valor do plano é <strong>obrigatório</strong>
+                    </mat-error>
+                </mat-form-field>
+                <mat-form-field fxFlex="15">
+                    <mat-label>Data de Adesão</mat-label>
+                    <input matInput type="date" placeholder="" formControlName="accessionDate">
+                    <mat-error *ngIf="newRequestForm.controls['accessionDate'].hasError('required')">
+                        Data de adesão é <strong>obrigatória</strong>
+                    </mat-error>
+                </mat-form-field>
+                <button mat-raised-button class="btn-primary" fxFlexOffset="10">Adicionar Solicitação</button>
+                
+            </div>
+        </form>
+    </mat-card>
+    <mat-card class="mat-elevation-z0 spaceTop">
+        <mat-card-header>
+            <mat-card-title>
+                Minhas solicitações
+            </mat-card-title>
+            <mat-card-subtitle>
+                Aqui você pode acompanhar o andamento de suas solicitações
+            </mat-card-subtitle>
+        </mat-card-header>
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z0">
+    
+            <ng-container matColumnDef="id">
+                <th mat-header-cell *matHeaderCellDef class="tableFontHeader"> Id </th>
+                <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+            </ng-container>
+    
+            <ng-container matColumnDef="company">
+                <th mat-header-cell *matHeaderCellDef class="tableFontHeader"> Empresa </th>
+                <td mat-cell *matCellDef="let element">
+                    <label class="table-item-title">{{element.company}}</label><br>
+                    <label class="table-item-subtitle">CNPJ: {{element.cnpj  | mask: '00.000.000/0000-00'}}</label>
+                </td>
+            </ng-container>
+    
+            <ng-container matColumnDef="plan">
+                <th mat-header-cell *matHeaderCellDef class="tableAlignHeader tableFontHeader"> Plano </th>
+                <td mat-cell *matCellDef="let element" class="tableAlignCell tableColorCell"> {{this.getPlan(element.plan)}} </td>
+            </ng-container>
+    
+            <ng-container matColumnDef="tariff">
+                <th mat-header-cell *matHeaderCellDef class="tableAlignHeader tableFontHeader"> Tarifa </th>
+                <td mat-cell *matCellDef="let element" class="tableAlignCell tableColorCell"> {{element.tariff | currency: 'BRL'}}  </td>
+            </ng-container>
+    
+            <ng-container matColumnDef="minutes">
+                <th mat-header-cell *matHeaderCellDef class="tableAlignHeader tableFontHeader"> Minutos </th>
+                <td mat-cell *matCellDef="let element" class="tableAlignCell tableColorCell"> {{this.getMinutes(element.minutes)}} </td>
+            </ng-container>
+    
+            <ng-container matColumnDef="planValue">
+                <th mat-header-cell *matHeaderCellDef class="tableAlignHeader tableFontHeader"> Valor do plano </th>
+                <td mat-cell *matCellDef="let element" class="tableAlignCell tableColorCell"> {{element.planValue | currency: 'BRL'}} </td>
+            </ng-container>
+    
+            <ng-container matColumnDef="accessionDate">
+                <th mat-header-cell *matHeaderCellDef class="tableAlignHeader tableFontHeader"> Data de adesão </th>
+                <td mat-cell *matCellDef="let element" class="tableAlignCell tableColorCell"> {{element.accessionDate | date: 'shortDate'}} </td>
+            </ng-container>
+    
+            <ng-container matColumnDef="sendDate">
+                <th mat-header-cell *matHeaderCellDef class="tableAlignHeader tableFontHeader"> Data de adesão </th>
+                <td mat-cell *matCellDef="let element" class="tableAlignCell tableColorCell"> {{element.sendDate | date: 'shortDate'}} </td>
+            </ng-container>
+    
+            <ng-container matColumnDef="action">
+                <th mat-header-cell *matHeaderCellDef class="tableAlignHeader tableFontHeader"> Ação </th>
+                <td mat-cell *matCellDef="let element" class="tableAlignCell tableColorCell"> <button mat-button
+                        [matMenuTriggerFor]="menuActions">{{element.action}}</button> </td>
+            </ng-container>
+    
+            <mat-menu #menuActions="matMenu">
+                <button mat-menu-item>Detalhes</button>
+                <button mat-menu-item>Editar</button>
+                <button mat-menu-item>Remover</button>
+            </mat-menu>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+    </mat-card>
 </div>
 
