--- a/talkMore/src/app/talk-requests/talk-requests.component.html
+++ b/talkMore/src/app/talk-requests/talk-requests.component.html
@@ -32,7 +32,7 @@
                         <mat-option *ngFor="let plan of _talkMorePlan" [value]="plan.value">
                             {{plan.label}}
                         </mat-option>
-                      </mat-select>
+                    </mat-select>
                     <mat-error *ngIf="newRequestForm.controls['plan'].hasError('required')">
                         Plano é <strong>obrigatório</strong>
                     </mat-error>
@@ -41,7 +41,8 @@
             <div class="formLayout" fxLayout="row" fxLayoutGap="20px">
                 <mat-form-field fxFlex="15">
                     <mat-label>Tarifa</mat-label>
-                    <input matInput placeholder="" formControlName="tariff" prefix="R$ " mask="separator.2" thousandSeparator=".">
+                    <input matInput placeholder="" formControlName="tariff" prefix="R$ " mask="separator.2"
+                        thousandSeparator=".">
                     <mat-error *ngIf="newRequestForm.controls['tariff'].hasError('required')">
                         Tarifa é <strong>obrigatória</strong>
                     </mat-error>
@@ -55,7 +56,8 @@
                 </mat-form-field>
                 <mat-form-field fxFlex="15">
                     <mat-label>Valor do plano</mat-label>
-                    <input matInput placeholder="" formControlName="planValue" prefix="R$ " mask="separator.2" thousandSeparator=".">
+                    <input matInput placeholder="" formControlName="planValue" prefix="R$ " mask="separator.2"
+                        thousandSeparator=".">
                     <mat-error *ngIf="newRequestForm.controls['planValue'].hasError('required')">
                         Valor do plano é <strong>obrigatório</strong>
                     </mat-error>
@@ -68,7 +70,7 @@
                     </mat-error>
                 </mat-form-field>
                 <button mat-raised-button class="btn-primary" fxFlexOffset="10">Adicionar Solicitação</button>
-                
+
             </div>
         </form>
     </mat-card>
@@ -82,65 +84,75 @@
             </mat-card-subtitle>
         </mat-card-header>
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z0">
-    
+
             <ng-container matColumnDef="id">
                 <th mat-header-cell *matHeaderCellDef class="tableFontHeader"> Id </th>
                 <td mat-cell *matCellDef="let element"> {{element.id}} </td>
             </ng-container>
-    
+
             <ng-container matColumnDef="company">
                 <th mat-header-cell *matHeaderCellDef class="tableFontHeader"> Empresa </th>
                 <td mat-cell *matCellDef="let element">
-                    <label class="table-item-title">{{element.company}}</label><br>
-                    <label class="table-item-subtitle">CNPJ: {{element.cnpj  | mask: '00.000.000/0000-00'}}</label>
+                    <label class="table-item-title">{{element.empresa}}</label><br>
+                    <label class="table-item-subtitle">CNPJ: {{element.cnpj | mask: '00.000.000/0000-00'}}</label>
                 </td>
             </ng-container>
-    
+
             <ng-container matColumnDef="plan">
                 <th mat-header-cell *matHeaderCellDef class="tableAlignHeader tableFontHeader"> Plano </th>
-                <td mat-cell *matCellDef="let element" class="tableAlignCell tableColorCell"> {{this.getPlan(element.plan)}} </td>
+                <td mat-cell *matCellDef="let element" class="tableAlignCell tableColorCell"> {{element.plano}} </td>
             </ng-container>
-    
+
             <ng-container matColumnDef="tariff">
                 <th mat-header-cell *matHeaderCellDef class="tableAlignHeader tableFontHeader"> Tarifa </th>
-                <td mat-cell *matCellDef="let element" class="tableAlignCell tableColorCell"> {{element.tariff | currency: 'BRL'}}  </td>
+                <td mat-cell *matCellDef="let element" class="tableAlignCell tableColorCell"> {{element.tarifa |
+                    currency: 'BRL'}} </td>
             </ng-container>
-    
+
             <ng-container matColumnDef="minutes">
                 <th mat-header-cell *matHeaderCellDef class="tableAlignHeader tableFontHeader"> Minutos </th>
-                <td mat-cell *matCellDef="let element" class="tableAlignCell tableColorCell"> {{this.getMinutes(element.minutes)}} </td>
+                <td mat-cell *matCellDef="let element" class="tableAlignCell tableColorCell">
+                    {{this.getMinutes(element.minutos)}} </td>
             </ng-container>
-    
+
             <ng-container matColumnDef="planValue">
                 <th mat-header-cell *matHeaderCellDef class="tableAlignHeader tableFontHeader"> Valor do plano </th>
-                <td mat-cell *matCellDef="let element" class="tableAlignCell tableColorCell"> {{element.planValue | currency: 'BRL'}} </td>
+                <td mat-cell *matCellDef="let element" class="tableAlignCell tableColorCell"> {{element.vplano |
+                    currency: 'BRL'}} </td>
             </ng-container>
-    
+
             <ng-container matColumnDef="accessionDate">
                 <th mat-header-cell *matHeaderCellDef class="tableAlignHeader tableFontHeader"> Data de adesão </th>
-                <td mat-cell *matCellDef="let element" class="tableAlignCell tableColorCell"> {{element.accessionDate | date: 'shortDate'}} </td>
+                <td mat-cell *matCellDef="let element" class="tableAlignCell tableColorCell"> {{element.dateAdesao |
+                    date: 'shortDate'}} </td>
             </ng-container>
-    
+
             <ng-container matColumnDef="sendDate">
                 <th mat-header-cell *matHeaderCellDef class="tableAlignHeader tableFontHeader"> Data de adesão </th>
-                <td mat-cell *matCellDef="let element" class="tableAlignCell tableColorCell"> {{element.sendDate | date: 'shortDate'}} </td>
+                <td mat-cell *matCellDef="let element" class="tableAlignCell tableColorCell"> {{element.dateEmissao |
+                    date: 'shortDate'}} </td>
             </ng-container>
-    
+
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef class="tableAlignHeader tableFontHeader"> Ação </th>
-                <td mat-cell *matCellDef="let element" class="tableAlignCell tableColorCell"> <button mat-button
-                        [matMenuTriggerFor]="menuActions">{{element.action}}</button> </td>
+                <td mat-cell *matCellDef="let element" class="tableAlignCell tableColorCell"> <button mat-button [matMenuTriggerFor]="menuActions" class="table-item-title">...</button>
+
+                    <mat-menu #menuActions="matMenu">
+                        <button mat-menu-item (click)="onClickEdit(element, false)">
+                            <mat-icon>description</mat-icon>Detalhes
+                        </button>
+                        <button mat-menu-item (click)="onClickEdit(element, true)">
+                            <mat-icon>edit</mat-icon>Editar
+                        </button>
+                        <button mat-menu-item (click)="onClickDelete(element)">
+                            <mat-icon>delete</mat-icon>Remover
+                        </button>
+                    </mat-menu>
+                </td>
             </ng-container>
-    
-            <mat-menu #menuActions="matMenu">
-                <button mat-menu-item>Detalhes</button>
-                <button mat-menu-item>Editar</button>
-                <button mat-menu-item>Remover</button>
-            </mat-menu>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
         <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
     </mat-card>
 </div>
-
