--- a/talkMore/src/app/talk-requests/detail-modal/detail-modal.component.sass
+++ b/talkMore/src/app/talk-requests/detail-modal/detail-modal.component.sass
@@ -4,3 +4,8 @@
     background-color: $orange
     color: $white
     height: 40px
+    width: 150px
+
+.btn-secondary
+    height: 40px
+    width: 150px
