--- a/talkMore/src/app/talk-requests/talk-requests.component.html
+++ b/talkMore/src/app/talk-requests/talk-requests.component.html
@@ -29,7 +29,7 @@
                     <mat-label>Plano</mat-label>
                     <mat-select formControlName="plan">
                         <mat-option>Selecione</mat-option>
-                        <mat-option *ngFor="let plan of _talkMorePlan" [value]="plan.value">
+                        <mat-option *ngFor="let plan of _talkMorePlan" [value]="plan.label">
                             {{plan.label}}
                         </mat-option>
                     </mat-select>
@@ -138,10 +138,10 @@
                 <td mat-cell *matCellDef="let element" class="tableAlignCell tableColorCell"> <button mat-button [matMenuTriggerFor]="menuActions" class="table-item-title">...</button>
 
                     <mat-menu #menuActions="matMenu">
-                        <button mat-menu-item (click)="onClickEdit(element, false)">
+                        <button mat-menu-item (click)="onClickDetails(element, false)">
                             <mat-icon>description</mat-icon>Detalhes
                         </button>
-                        <button mat-menu-item (click)="onClickEdit(element, true)">
+                        <button mat-menu-item (click)="onClickDetails(element, true)">
                             <mat-icon>edit</mat-icon>Editar
                         </button>
                         <button mat-menu-item (click)="onClickDelete(element)">
