Add pagination and changed button secondary border

--- a/talkMore/src/app/talk-requests/detail-modal/detail-modal.component.sass
+++ b/talkMore/src/app/talk-requests/detail-modal/detail-modal.component.sass
@@ -9,6 +9,8 @@
 .btn-secondary
     height: 40px
     width: 150px
+    color: $orange
+    border: 1px solid $orange
 
 .formLayout2
     padding-bottom: 16px
