--- a/talkMore/src/app/shared/header/header.component.html
+++ b/talkMore/src/app/shared/header/header.component.html
@@ -22,7 +22,7 @@
           <mat-icon class="arrowAlign">keyboard_arrow_down</mat-icon>
         </button>
         <mat-menu #menu="matMenu">
-          <button mat-menu-item>
+          <button mat-menu-item  (click)="logout()">
             <mat-icon>logout</mat-icon>Logout</button>
         </mat-menu>
       </div>
